# codejam

./: .gitignore  codejam.cabal  coinjam.hs  fractiles.hs  pancakes.hs
1B/A/: A-small-attempt1.in  A-small.out  A.cpp  Makefile  small2.out
1B/B/: B.cpp  Makefile  small.in  small.out  small2.in  small2.out  test.in
1B/C/: Makefile  large.in  large.out  small.out  small0.in  solve.py
qualification2016/: codejam.cabal  coinjam.hs  pancakes.hs  sheep.hs
