name:                codejam-qualification-2016
version:             0.1.0.0
synopsis:            Solution to Codejam qualification round 2016.
description:         Please see README.md
homepage:            https://github.com/lslah/codejam
license:             BSD3
license-file:        LICENSE
author:              Thomas Wienecke
maintainer:          wienecke.t@gmail.com
copyright:           2016 Thomas Wienecke
category:            CodingContest
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , digits
                     , primes
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lslah/codejam
